--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </div>
         </div>
         <div class="row mt-4">
-          <div class="col-md-6">
+          <!-- <div class="col-md-6">
             <h3>Backend Technologies</h3>
             <ul class="list-group">
               <li class="list-group-item">Node.js</li>
@@ -118,7 +118,7 @@
               <li class="list-group-item">MongoDB</li>
 
             </ul>
-          </div>
+          </div> -->
           <div class="col-md-6">
             <h3>Version Control</h3>
             <ul class="list-group">
