--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
           <div class="col-md-6">
             <h3>Frontend Frameworks</h3>
             <ul class="list-group">
-              <li class="list-group-item">ReactJS</li>
-              <li class="list-group-item">Vue.js</li>
+              <!-- <li class="list-group-item">ReactJS</li>
+              <li class="list-group-item">Vue.js</li> -->
               <li class="list-group-item">Bootstrap</li>
 
             </ul>
